# money-transfer-demo

./: .gitignore  .tool-versions  README.md  package-lock.json  setcloudenv.example  startlocalworkers.sh
.devcontainer/: devcontainer.json
.github/workflows/: containers.yml  e2e-tests.yml  ruby-tests.yml
autoscale/: .dockerignore  Dockerfile  README.md  demo.sh  deployment.yaml  scaledobject.yaml  trigger-auth-apikey.yaml  trigger-auth-tls.yaml
dotnet/: .gitignore  README.md  money-transfer-dotnet.sln  startcloudworker.sh  startlocalworker.sh
dotnet/src/: AccountTransferActivities.cs  AccountTransferWorkflow.workflow.cs  AccountTransferWorkflowScenarios.workflow.cs  (+6 more)
e2e/: README.md  package-lock.json  package.json  playwright.config.ts  run.sh
go/: Dockerfile  go.mod  go.sum  startcloudworker.sh  startlocalworker.sh
java/: README.md  build.gradle  sendcloudapproval.sh  settings.gradle  startcloudworker.sh  startlocalworker.sh
python/: README.md  account_transfer_workflow.py  account_transfer_workflow_scenarios.py  activities.py  codec.py  pyproject.toml  shared_objects.py  startcloudworker.sh  startlocalworker.sh  worker.py
python/tests/: test_activities.py  test_workflow_scenarios.py
ruby/: Gemfile  README.md  startcloudworker.sh  startlocalworker.sh  worker.rb
typescript/: Dockerfile  README.md  package-lock.json  package.json  startcloudworker.sh  startcodecserver.sh  startlocalworker.sh
ui/: Dockerfile  README.md  build.gradle  sendapproval.sh  sendlocalapproval.sh  settings.gradle  startcloudwebui.sh  startlocalwebui.sh  starttemporalserver.sh
(+126 files in other folders)
