[tool.poetry]
name = "money-transfer-worker-python"
version = "0.1.0"
description = "A mone transfer worker written in Python"
authors = ["Rick Ross <rick.ross@temporal.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
temporalio = "^1.7.1"
cryptography = "^43.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
